实现了摄像头模块，能够实时播放xbot上的摄像头视频

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -26,4 +26,6 @@
 
     <color name="colorLightPink">#E968A1</color>
     <color name="colorStatePageText">#333333</color>
+
+    <color name="videoBarColor">#aa616161</color>
 </resources>
