--- a/app/src/main/res/layout-xlarge/fragment_robot_state.xml
+++ b/app/src/main/res/layout-xlarge/fragment_robot_state.xml
@@ -26,7 +26,6 @@
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:background="@drawable/background"
-        android:padding="20dp"
         app:radius="100dp"
         app:normal_state_color="@color/colorPrimary"
         app:mid_state_color="#ff8f00"
@@ -61,7 +60,7 @@
             android:textSize="20sp"
             android:textColor="@color/colorStatePageText"
             android:layout_centerVertical="true"
-            android:layout_marginEnd="20dp"
+            android:layout_marginEnd="34dp"
             android:text="电机电源"/>
         <Switch
             android:id="@+id/switcher"
@@ -105,7 +104,9 @@
             android:id="@+id/seekbar_cloud_degree"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
             android:layout_toEndOf="@id/cloud_degree_txt"
+            android:paddingLeft="25dp"
             app:is_horizontal="true"
             app:track_length="400dp"
             app:track_width="8dp"
@@ -132,87 +133,69 @@
         android:layout_centerHorizontal="true"
         android:layout_below="@id/layout_item2"/>
 
-    <LinearLayout
-        android:id="@+id/linear_layout"
+
+    <RelativeLayout
+        android:id="@+id/layout_item3"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/divider3"
+        android:paddingStart="70dp"
+        android:paddingTop="6dp"
+        android:paddingBottom="30dp">
+
+        <TextView
+            android:id="@+id/camera_degree_txt"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="摄像头角度"
+            android:layout_centerVertical="true"
+            android:textSize="20sp"
+            android:textColor="@color/colorStatePageText"
+            />
+
+        <cn.iscas.xlab.xbotplayer.customview.CustomSeekBar
+            android:id="@+id/seekbar_camera_degree"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:layout_toEndOf="@id/camera_degree_txt"
+            android:paddingLeft="8dp"
+            app:is_horizontal="true"
+            app:track_length="400dp"
+            app:track_width="8dp"
+            app:track_color="@color/colorPrimary"
+            app:indicator_radius="13dp"
+            app:indicator_color="@color/colorLightPink"
+            app:bubble_color="@color/colorPrimary"
+            app:bubble_height="40dp"
+            app:bubble_width="60dp"
+            app:bubble_text_size="20sp"
+            app:bubble_text_color="@color/colorLightPink"
+            app:min_value="-45"
+            app:max_value="45"
+            app:value_text_size="20sp"
+            app:value_text_color="@color/colorStatePageText"/>
+
+
+    </RelativeLayout>
+
+
+    <View
+        android:id="@+id/divider4"
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="#eeeeee"
+        android:layout_centerHorizontal="true"
+        android:layout_below="@id/layout_item3"/>
+
+    <Button
+        android:id="@+id/bt_reset"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:orientation="horizontal"
-        android:layout_below="@id/divider3"
-        android:layout_marginTop="20dp">
-
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:layout_marginEnd="110dp">
-            <cn.iscas.xlab.xbotplayer.customview.CustomSeekBar
-                android:id="@+id/seekbar_lift_height"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal"
-                app:is_horizontal="false"
-                app:track_length="300dp"
-                app:track_width="8dp"
-                app:track_color="@color/colorPrimary"
-                app:indicator_radius="13dp"
-                app:indicator_color="@color/colorLightPink"
-                app:bubble_color="@color/colorPrimary"
-                app:bubble_height="40dp"
-                app:bubble_width="60dp"
-                app:bubble_text_size="20sp"
-                app:bubble_text_color="@color/colorLightPink"
-                app:min_value="0"
-                app:max_value="100"
-                app:value_text_size="20sp"
-                app:value_text_color="@color/colorStatePageText"/>
-            <TextView
-                android:id="@+id/lift_height_txt"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="升降台高度"
-                android:layout_gravity="center_horizontal"
-                android:textSize="20sp"
-                android:textColor="@color/colorStatePageText"
-                />
-        </LinearLayout>
-
-
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
-            <cn.iscas.xlab.xbotplayer.customview.CustomSeekBar
-                android:id="@+id/seekbar_camera_degree"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal"
-                app:is_horizontal="false"
-                app:track_length="300dp"
-                app:track_width="8dp"
-                app:track_color="@color/colorPrimary"
-                app:indicator_radius="13dp"
-                app:indicator_color="@color/colorLightPink"
-                app:bubble_color="@color/colorPrimary"
-                app:bubble_height="40dp"
-                app:bubble_width="60dp"
-                app:bubble_text_size="20sp"
-                app:bubble_text_color="@color/colorLightPink"
-                app:min_value="-45"
-                app:max_value="45"
-                app:value_text_size="20sp"
-                app:value_text_color="@color/colorStatePageText"/>
-            <TextView
-                android:id="@+id/camera_degree_txt"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal"
-                android:text="摄像头角度"
-                android:textSize="20sp"
-                android:textColor="@color/colorStatePageText"
-                />
-        </LinearLayout>
-
-    </LinearLayout>
-
+        android:text="重置"
+        android:layout_margin="20dp"
+        android:textSize="20sp"
+        android:layout_alignParentBottom="true"
+        android:background="@drawable/bt_background"
+        />
 </RelativeLayout>
