--- a/app/src/main/res/layout/fragment_robot_state.xml
+++ b/app/src/main/res/layout/fragment_robot_state.xml
@@ -60,7 +60,7 @@
             android:textSize="14sp"
             android:textColor="@color/colorStatePageText"
             android:layout_centerVertical="true"
-            android:layout_marginEnd="10dp"
+            android:layout_marginEnd="28dp"
             android:text="电机电源"/>
         <Switch
             android:id="@+id/switcher"
@@ -105,7 +105,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:layout_toEndOf="@id/cloud_degree_txt"
-            android:paddingLeft="10dp"
+            android:paddingLeft="25dp"
             app:is_horizontal="true"
             app:track_length="200dp"
             app:track_width="5dp"
@@ -133,87 +133,68 @@
         android:layout_centerHorizontal="true"
         android:layout_below="@id/layout_item2"/>
 
-    <LinearLayout
-        android:id="@+id/linear_layout"
+
+    <RelativeLayout
+        android:id="@+id/layout_item3"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/divider3"
+        android:paddingStart="30dp"
+        android:paddingTop="6dp"
+        android:paddingBottom="16dp">
+
+        <TextView
+            android:id="@+id/camera_degree_txt"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="摄像头角度"
+            android:layout_centerVertical="true"
+            android:textSize="14sp"
+            android:textColor="@color/colorStatePageText"
+            />
+
+        <cn.iscas.xlab.xbotplayer.customview.CustomSeekBar
+            android:id="@+id/seekbar_camera_degree"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:layout_toEndOf="@id/camera_degree_txt"
+            android:paddingLeft="10dp"
+            app:is_horizontal="true"
+            app:track_length="200dp"
+            app:track_width="5dp"
+            app:track_color="@color/colorPrimary"
+            app:indicator_radius="9dp"
+            app:indicator_color="@color/colorLightPink"
+            app:bubble_color="@color/colorPrimary"
+            app:bubble_height="20dp"
+            app:bubble_width="30dp"
+            app:bubble_text_size="12sp"
+            app:bubble_text_color="@color/colorLightPink"
+            app:min_value="-45"
+            app:max_value="45"
+            app:value_text_size="14sp"
+            app:value_text_color="@color/colorStatePageText"/>
+
+
+    </RelativeLayout>
+
+
+    <View
+        android:id="@+id/divider4"
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="#eeeeee"
+        android:layout_centerHorizontal="true"
+        android:layout_below="@id/layout_item3"/>
+ <Button
+        android:id="@+id/bt_reset"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:orientation="horizontal"
-        android:layout_marginTop="12dp"
-        android:layout_below="@id/divider3">
-
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:layout_marginEnd="40dp">
-            <cn.iscas.xlab.xbotplayer.customview.CustomSeekBar
-                android:id="@+id/seekbar_lift_height"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal"
-                app:is_horizontal="false"
-                app:track_length="170dp"
-                app:track_width="5dp"
-                app:track_color="@color/colorPrimary"
-                app:indicator_radius="9dp"
-                app:indicator_color="@color/colorLightPink"
-                app:bubble_color="@color/colorPrimary"
-                app:bubble_height="20dp"
-                app:bubble_width="30dp"
-                app:bubble_text_size="12sp"
-                app:bubble_text_color="@color/colorLightPink"
-                app:min_value="0"
-                app:max_value="100"
-                app:value_text_size="14sp"
-                app:value_text_color="@color/colorStatePageText"/>
-            <TextView
-                android:id="@+id/lift_height_txt"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="升降台高度"
-                android:layout_gravity="center_horizontal"
-                android:textSize="14sp"
-                android:textColor="@color/colorStatePageText"
-                />
-        </LinearLayout>
-
-
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
-            <cn.iscas.xlab.xbotplayer.customview.CustomSeekBar
-                android:id="@+id/seekbar_camera_degree"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal"
-                app:is_horizontal="false"
-                app:track_length="170dp"
-                app:track_width="5dp"
-                app:track_color="@color/colorPrimary"
-                app:indicator_radius="9dp"
-                app:indicator_color="@color/colorLightPink"
-                app:bubble_color="@color/colorPrimary"
-                app:bubble_height="20dp"
-                app:bubble_width="30dp"
-                app:bubble_text_size="12sp"
-                app:bubble_text_color="@color/colorLightPink"
-                app:min_value="-45"
-                app:max_value="45"
-                app:value_text_size="14sp"
-                app:value_text_color="@color/colorStatePageText"/>
-            <TextView
-                android:id="@+id/camera_degree_txt"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal"
-                android:text="摄像头角度"
-                android:textSize="14sp"
-                android:textColor="@color/colorStatePageText"
-                />
-        </LinearLayout>
-
-    </LinearLayout>
-
+        android:text="重置"
+        android:layout_margin="20dp"
+        android:textSize="12sp"
+        android:layout_alignParentBottom="true"
+        android:background="@drawable/bt_background"
+        />
 </RelativeLayout>
